# specularRemoval_globalOptimalMethod

./: CMakeLists.txt  main.cpp
CPUProcess/: convexWeightsEstimation.cpp  convexWeightsEstimation.h  specularDetectCorrect.cpp  specularDetectCorrect.h
